feat: initialize frontend with React and Vite
- Added package.json for project dependencies and scripts.
- Created Vite logo SVG file for public assets.
- Added global CSS styles in App.css for layout and design.
- Implemented main application logic in App.jsx, including article fetching, scraping, and deletion functionalities.
- Included React logo SVG in assets.
- Defined global styles in index.css for consistent theming.
- Set up main entry point in main.jsx for rendering the application.
- Configured Vite with a basic setup in vite.config.js.

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,16 +7,19 @@
     "start": "node src/app.js",
     "dev": "node src/app.js",
     "llm": "node src/runFullWorkFlow.js",
-    "pipeline": "node src/pipeline/runPipeline.js"
+    "pipeline": "node src/pipeline/runPipeline.js",
+    "scrape":"node src/services/beyondChatsScraper.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@mozilla/readability": "^0.5.0",
     "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsdom": "^24.0.0",
     "mongoose": "^8.5.1",
+    "nodemon": "^3.1.11",
     "openai": "^4.52.0"
   },
   "engines": {
